# jarswaf

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.agent  Dockerfile.test  README.md  ROADMAP.md  bot_test_config.toml  build.rs  check.bat  compliance_report.md  config.standalone.toml  config.toml  docker-compose.agent.yml  docker-compose.multi-agent.yml  docker-compose.yml  install.sh  jarswaf.log.ecs.json  load_test.py  manager.sh  package-lock.json  package.json  rewrite_main.py  setup_hosts.py  start.bat  start.sh  stress_test.py  test_agent.toml  test_config.toml  test_ebpf.sh  test_ebpf_config.toml  test_manager.toml
.github/workflows/: devsecops.yml  release.yml
.zap/: rules.tsv
dashboard/: .prettierrc  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
dashboard/public/: install.ps1  install.sh
dashboard/src/: App.svelte  app.css
dashboard/src/components/layout/: Layout.svelte  Sidebar.svelte  SidebarItem.svelte  Topbar.svelte
dashboard/src/components/ui/: AddCertificateModal.svelte  Badge.svelte  Button.svelte  Card.svelte  ConfirmationModal.svelte  DataTable.svelte  Globe.svelte  LogViewer.svelte  PresetDetailsModal.svelte  StatCard.svelte  ToastContainer.svelte
dashboard/src/lib/: LiveLogs.svelte  Overview.svelte  RateLimiting.svelte  RuleEngine.svelte  VirtualHosts.svelte  stores.ts  toast.ts
dashboard/src/lib/components/: AlertBanner.svelte  CustomRuleBuilder.svelte  DeployToast.svelte  GlassPanel.svelte  GlowingLineChart.svelte  MetricCard.svelte  ModalOverlay.svelte  PageHeader.svelte  RateLimitModal.svelte  Sidebar.svelte  SimulationSandbox.svelte  StatusBadge.svelte  TopBar.svelte  VirtualHostModal.svelte
dashboard/src/pages/: AccessControl.svelte  AgentNodes.svelte  Dashboard.svelte  LiveLogs.svelte  RateLimiting.svelte  RuleEngine.svelte  SSLCertificates.svelte  ThreatIntel.svelte  VHostConfig.svelte
helm/jarswaf/: Chart.yaml  values.yaml
helm/jarswaf/templates/: _helpers.tpl  configmap.yaml  deployment-controller.yaml  deployment-proxy.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service-headless.yaml  service.yaml
jarswaf-ebpf/: Cargo.toml
jarswaf-ebpf/.cargo/: config.toml
jarswaf-ebpf/src/: main.rs
proto/: waf_sync.proto
scripts/: jarswaf.sh
src/: config.rs  dlp.rs  gossip.rs  lib.rs  logging.rs  main.rs  metrics.rs  proxy.rs  proxy_engine.rs  rasp.rs  rules.rs  tls.rs  types.rs  vhost.rs  wasm.rs  webhook.rs  xdp.rs
src/agent/: blocklist.rs  discovery.rs  metrics.rs  mod.rs  server.rs  websocket.rs
src/compliance/: mod.rs
src/controller/: auth.rs  mod.rs  state.rs  websocket.rs
src/controller/handlers/: agents.rs  compliance.rs  config.rs  lists.rs  logs.rs  metrics.rs  mod.rs  rasp.rs  ratelimits.rs  redteam.rs  rules.rs  threat_intel.rs  vhosts.rs
src/grpc/: client.rs  mod.rs  server.rs
src/rules/: anomaly.rs  api.rs  api_security.rs  body.rs  bot_challenge.rs  evasion.rs  graphql.rs  headers.rs  multipart.rs  rate_limit.rs  redteam.rs  threat_intel.rs  trust.rs
xtask/: Cargo.toml
xtask/src/: main.rs  redteam.rs  report.rs
