[package]
name = "jarswaf"
version = "0.1.0"
edition = "2021"
description = "Pure Layer 7 WAF - Homelab Edition"

[workspace]
members = [
    "xtask",
]
exclude = [
    "jarswaf-ebpf",
]

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
dashmap = "5"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
once_cell = "1.21.4"
rcgen = { version = "0.14.8", features = ["x509-parser"] }
tokio-rustls = "0.26.4"
rustls-pki-types = "1.14.1"
rustls-acme = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-stream = { version = "0.1", features = ["sync"] }
urlencoding = "2.1.3"
sysinfo = "0.30.12"
tokio-tungstenite = "0.21.0"
tokio-util = "0.7"
maxminddb = "0.27.0"
htmlescape = "0.3"
unicode-normalization = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
pingora = { version = "0.4.0", features = ["proxy", "rustls"] }
bytes = "1"
pingora-core = { version = "0.4.0", features = ["rustls"] }
pingora-proxy = "0.4.0"
pingora-http = "0.4.0"
pingora-load-balancing = "0.4.0"
arc-swap = "1.7.1"
async-trait = "0.1.80"
futures-util = "0.3"
sha2 = "0.10"
redis = { version = "0.25.3", features = ["tokio-comp"] }
prometheus = { version = "0.13", features = ["process"] }
quick_cache = "0.7"
bincode = "1"
chacha20poly1305 = "0.11.0"
rand = "0.8.5"
wasmtime = "29"
anyhow = "1"
tract-onnx = "0.21.7"

# gRPC & Redis (Phase 10)
tonic = "0.11"
prost = "0.12"
ahash = { version = "0.8.12", features = ["serde"] }



[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0.0"
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user"] } # for privilege dropping

[target.'cfg(target_os = "linux")'.dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }

