[package]
name = "jarswaf-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
network-types = "0.0.5"

[[bin]]
name = "jarswaf-ebpf"
path = "src/main.rs"


